<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.quotes.model.QuotesViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            tools:context=".ui.StartFragment">

            <TextView
                android:id="@+id/choose_number_textView"
                style="@style/Widget.Quotes.TextView.name"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/choose_number_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/choose_number_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/choose_number_textField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/choose_number_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choose_number_textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/choose_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/get_quote_number"
                style="@style/Widget.Quotes.Button"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/get_quote_by_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choose_number_textField" />

            <View
                android:id="@+id/divider"
                android:background ="?attr/dividerHorizontal"
                android:layout_height="3dp"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/get_quote_number" />

            <TextView
                android:id="@+id/or"
                style="@style/Widget.Quotes.TextView.quote"
                android:layout_marginTop="24dp"
                android:padding="8dp"
                android:text="@string/or"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <Button
                android:id="@+id/get_random_quote"
                style="@style/Widget.Quotes.Button"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/get_random_quote"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/or" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>